Trabajo terminado pana

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
+  
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -23,7 +23,7 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+body {  
   margin: 0;
   display: flex;
   place-items: center;
@@ -66,4 +66,18 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.ListaPokemon{
+    
+  background-image: url( './assets/02.png' ) ;
+  height: 74px;
+  width: 74px;
+}
+
+.lista{
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  align-items: baseline;
 }
